made it look better

--- a/index.html
+++ b/index.html
@@ -3,46 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haunting Histories: The Tale of Halloween</title>
+    <title>History of Halloween</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Haunting Histories: The Tale of Halloween</h1>
-        <p>Discover the origins, traditions, and why we celebrate Halloween today in spooky style!</p>
+        <h1>The History of Halloween</h1>
     </header>
+
+    <section id="introduction">
+        <div class="container">
+            <h2>Introduction</h2>
+            <p>Halloween is a holiday celebrated on the night of October 31st. The tradition originated with the ancient Celtic festival of Samhain, where people would light bonfires and wear costumes to ward off ghosts. Today, Halloween is associated with activities like trick-or-treating, costume parties, carving pumpkins, and more.</p>
+        </div>
+    </section>
 
     <section id="history">
         <div class="container">
-            <h2>The Origins of Halloween</h2>
-            <p>Halloween’s origins date back over 2,000 years to the ancient Celtic festival of Samhain. The Celts, who lived in what is now Ireland, celebrated their new year on November 1st. On the night of October 31st, they believed the boundary between the living and the dead blurred, and ghosts of the dead returned to earth.</p>
-            <p>The festival involved bonfires, costumes, and sacrifices to deities. Over time, as the Romans conquered Celtic lands, they adopted and blended these traditions with their own festivals.</p>
-            <img id="pumpkin" src="pumpkin.png" alt="Pumpkin Image">
+            <h2>History of Halloween</h2>
+            <p>The history of Halloween dates back over 2,000 years to the Celtic festival of Samhain, marking the end of the harvest and the beginning of winter. The Celts believed that on the night before November 1st, the boundary between the living and the dead blurred, and ghosts returned to earth.</p>
+            <p>As time went on, Halloween evolved with influences from Roman and Christian traditions, becoming more of a community-based holiday focused on fun, games, and food. By the early 20th century, Halloween had become a secular but still community-centered holiday, especially in the United States.</p>
         </div>
     </section>
 
-    <section id="modern-day">
+    <section id="costumes">
         <div class="container">
-            <h2>Halloween Today</h2>
-            <p>Today, Halloween is celebrated across many parts of the world, though it's most prominent in North America. It's a night of fun and fright with trick-or-treating, costume parties, haunted houses, and pumpkin carving. Modern celebrations are rooted in centuries of folklore, but now emphasize community and creativity.</p>
-            <p>People of all ages dress up as their favorite characters, both scary and fun. It's a time for spooky stories, indulging in candy, and celebrating the unknown.</p>
-        </div>
-    </section>
-
-    <section id="costume-origins">
-        <div class="container">
-            <h2>The Origins of Costumes</h2>
-            <p>Costumes have been a part of Halloween for centuries, dating back to the belief that wearing disguises could help hide individuals from spirits. Today, costumes are worn not to ward off spirits, but for fun. Popular costumes have evolved over the years, from witches and ghosts to superheroes and fictional characters.</p>
-            <p>Costumes provide a chance for self-expression, letting people transform into someone—or something—else, even if just for one night.</p>
-        </div>
-    </section>
-
-    <section id="my-costume">
-        <div class="container">
-            <h2>My Halloween Costume</h2>
-            <button id="costume-button" onclick="revealCostume()">See My Costume!</button>
-            <p id="costume-reveal"></p>
+            <h2>Why Costumes?</h2>
+            <p>The tradition of dressing up in costumes for Halloween stems from the ancient Celts who believed that wearing costumes would help them blend in with spirits and avoid harm. Today, costumes are worn for fun and creativity, and they are a major part of modern Halloween celebrations.</p>
         </div>
     </section>
 
@@ -50,24 +38,43 @@
         <div class="container">
             <h2>Halloween Quiz</h2>
             <p>Test your Halloween knowledge with a fun quiz!</p>
+            
             <div>
                 <p>1. What was Halloween originally called?</p>
                 <input type="text" id="q1">
             </div>
+            
             <div>
                 <p>2. What do pumpkins represent during Halloween?</p>
                 <input type="text" id="q2">
             </div>
+
             <button onclick="checkQuiz()">Submit Quiz</button>
             <p id="quiz-result"></p>
         </div>
     </section>
 
     <footer>
-        <p>Made with 💀 by Kashyap Sukshavasi</p>
+        <p>Made with ❤️ by Kashyap Sukshavasi</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        function checkQuiz() {
+            const answer1 = document.getElementById("q1").value.toLowerCase();
+            const answer2 = document.getElementById("q2").value.toLowerCase();
+
+            let score = 0;
+
+            if (answer1 === "samhain") {
+                score++;
+            }
+            if (answer2 === "protection" || answer2 === "warding off evil") {
+                score++;
+            }
+
+            document.getElementById("quiz-result").textContent = `You scored ${score} out of 2!`;
+        }
+    </script>
 
 </body>
 </html>
